Updated: Uses Spring Boot, Spring Mail, Spring Data JPA, Freemaker Mails + fixes, improvements and additional tests